# project_manipulation

./: README.md
arm_freeze_cpp/: CMakeLists.txt  package.xml
arm_freeze_cpp/action/: ArmFreeze.action
arm_freeze_cpp/include/arm_freeze_cpp/: arm_freeze_client.h  arm_freeze_server.h
arm_freeze_cpp/src/: arm_freeze_client.cpp  arm_freeze_client_node.cpp  arm_freeze_server.cpp  arm_freeze_server_node.cpp
multirobot_actions/: CMakeLists.txt  package.xml
multirobot_actions/action/: ee_plan.action  move_platform.action  traj_plan.action
multirobot_actions/launch/: move_both.launch  multirobot_action.launch
multirobot_actions/nodes/: align_ee_opposite_server.py  freeze_mobile_ee_client.py  freeze_mobile_ee_server.py  mobile_platform_rotation_controller_action_client.py  mobile_platform_rotation_controller_action_server.py  move_both_client.py  move_both_server.py  move_ee_client.py  move_ee_server.py  move_mobile_platform.py  move_mobile_platform_client.py  move_mobile_platform_localization_client.py  move_mobile_platform_localization_server.py  move_mobile_platform_server.py  send_ee_opposite_client.py  send_ee_opposite_server.py
multirobot_services/: CMakeLists.txt  package.xml
multirobot_services/launch/: multirobot_service.launch
multirobot_services/nodes/: ekf_odometry_listener_server.py  ground_truth_listener_base_link_server.py  ground_truth_listener_client.py  ground_truth_listener_mobile_tool0_server.py  ground_truth_listener_server.py  imu_listener_server.py  odometry_listener_server.py
multirobot_services/srv/: GroundTruthListener.srv
multirobot_state_publisher/: CMakeLists.txt  package.xml
multirobot_state_publisher/nodes/: fixed_ee_coordinate_publisher.py  mobile_platform_controller.py  mr_advanced_manipulation.py  mr_ee_cartesian_path_publisher.py  mr_ee_coordinate_publisher.py
